--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "font-awesome": "^4.7.0",
+    "gsap": "^3.2.4",
+    "mongoose": "^5.9.5",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
